--- a/lib/okapi.cabal
+++ b/lib/okapi.cabal
@@ -28,57 +28,35 @@ source-repository head
 library
   exposed-modules:
       Okapi
-      Okapi.Endpoint
-      Okapi.Matchpoint
-      Okapi.Request
-      Okapi.Script
-      Okapi.Script.Path
-      Okapi.Script.Query
-      Okapi.Script.Headers
-      Okapi.Script.Body
-      Okapi.Script.Responder
-      Okapi.Script.AddHeader
-      Okapi.Script.Security
+      Okapi.Parser.Alt.Body
+      Okapi.Parser.Alt.Headers
+      Okapi.Parser.Alt.Path
+      Okapi.Parser.Alt.Query
+      Okapi.Parser.Ap.Body
+      Okapi.Parser.Ap.Headers
+      Okapi.Parser.Ap.Path
+      Okapi.Parser.Ap.Query
+      Okapi.Pattern
   other-modules:
       Paths_okapi
   hs-source-dirs:
       src
   build-depends:
       aeson >=1.4.7
-    , attoparsec
     , base >=4.7 && <5
     , base64
     , bytestring
     , case-insensitive
     , containers
     , cookie
-    , cryptonite
-    , extra
     , http-api-data
     , http-types
-    , insert-ordered-containers
-    , kind-generics
-    , kind-generics-th
-    , linear-base
-    , memory
-    , mmorph
-    , monad-par
-    , mtl
-    , natural-transformation
-    , network
-    , openapi3
-    , parser-combinators
     , pretty-simple
     , text
-    , transformers
-    , unagi-chan
     , vault
     , wai
     , wai-extra
-    , wai-websockets
     , warp
-    , warp-tls
-    , websockets
   default-language: Haskell2010
 
 test-suite okapi-test
@@ -90,88 +68,7 @@ test-suite okapi-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson >=1.4.7
-    , attoparsec
-    , base >=4.7 && <5
-    , base64
-    , bytestring
-    , containers
-    , cookie
-    , cryptonite
-    , doctest-parallel
-    , extra
+    base >=4.7 && <5
     , hspec
-    , http-api-data
-    , http-types
-    , linear-base
-    , memory
-    , mmorph
-    , mtl
-    , network
-    , okapi
-    , openapi3
-    , parallel
-    , parser-combinators
     , text
-    , transformers
-    , unagi-chan
-    , vault
-    , wai
-    , wai-extra
-    , wai-websockets
-    , warp
-    , warp-tls
-    , websockets
   default-language: Haskell2010
-
-executable realworld
-    main-is:          Main.hs
-    other-modules:
-      App
-      Data
-      Database
-      JWT
-      API
-      API.Authentication
-      API.Registration
-      API.GetCurrentUser
-      API.UpdateUser
-      API.GetProfile
-      API.FollowUser
-      API.UnFollowUser
-      API.ListArticles
-      API.FeedArticles
-      API.GetArticle
-      API.UpdateArticle
-      API.CreateArticle
-      API.DeleteArticle
-      API.AddComment
-      API.GetComments
-      API.DeleteComment
-      API.FavoriteArticle
-      API.UnFavoriteArticle
-      API.GetTags
-
-    -- Modules included in this executable, other than Main.
-    -- other-modules:
-
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
-    build-depends:
-      base ^>=4.16.4.0
-      , okapi
-      , text
-      , http-api-data
-      , pretty-simple
-      , aeson
-      , bytestring
-      , jose
-      , openapi3
-      , sqlite-simple
-      , hedis
-      , time
-      , transformers
-      , lens
-      , natural-transformation
-    hs-source-dirs:   realworld
-    default-language: Haskell2010
