--- a/lib/okapi.cabal
+++ b/lib/okapi.cabal
@@ -28,12 +28,15 @@ source-repository head
 library
   exposed-modules:
       Okapi
-      Okapi.Parser.Headers.Alt
-      Okapi.Parser.Headers.Ap
-      Okapi.Parser.Headers.Operation
-      Okapi.Parser.Query.Alt
-      Okapi.Parser.Query.Ap
-      Okapi.Parser.Query.Operation
+      -- Okapi.DSL
+      -- Okapi.DSL.Alternative
+      -- Okapi.DSL.Applicative
+      -- Okapi.Parser.Body
+      -- Okapi.Parser.Headers
+      -- Okapi.Parser.Path
+      -- Okapi.Parser.Query
+      -- Okapi.Parser.Request
+      Okapi.NewDSL
       Okapi.Pattern
       Okapi.Tree
   other-modules:
@@ -48,8 +51,10 @@ library
     , case-insensitive
     , containers
     , cookie
+    , extra
     , http-api-data
     , http-types
+    , network
     , pretty-simple
     , text
     , vault
