--- a/lib/okapi.cabal
+++ b/lib/okapi.cabal
@@ -29,9 +29,11 @@ library
   exposed-modules:
       Okapi
       Okapi.Pattern
+      Okapi.Headers
       Okapi.Secret
-      Okapi.App
+      Okapi.API
       Okapi.Route
+      Okapi.Response
   other-modules:
       Paths_okapi
   hs-source-dirs:
@@ -53,7 +55,8 @@ library
     , text
     , vault
     , wai
-    -- , wai-extra
+    , wai-extra
+    , wai-logger
     , warp
   default-language: Haskell2010
 
