--- a/lib/okapi.cabal
+++ b/lib/okapi.cabal
@@ -36,8 +36,6 @@ library
       Okapi.App
       Okapi.Route
       Okapi.Response
-      Example.Calculator
-      Example.Bookstore
   other-modules:
       Paths_okapi
   hs-source-dirs:
@@ -65,6 +63,52 @@ library
     , wai-logger
     , warp
   default-language: Haskell2010
+
+executable hello-world
+  main-is:             Main.hs
+  hs-source-dirs:
+      examples/hello-world
+  build-depends:
+      base
+    , okapi
+    , warp
+    , wai
+    , text
+    , http-api-data
+    , http-types
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  default-language:    Haskell2010
+
+executable calculator
+  main-is:             Main.hs
+  hs-source-dirs:
+      examples/calculator
+  build-depends:
+      base
+    , okapi
+    , warp
+    , wai
+    , text
+    , http-api-data
+    , http-types
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  default-language:    Haskell2010
+
+executable bookstore
+  main-is:             Main.hs
+  hs-source-dirs:
+      examples/bookstore
+  build-depends:
+      base
+    , aeson
+    , okapi
+    , warp
+    , wai
+    , text
+    , http-api-data
+    , http-types
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  default-language:    Haskell2010
 
 test-suite okapi-test
   type: exitcode-stdio-1.0
