--- a/lib/okapi.cabal
+++ b/lib/okapi.cabal
@@ -110,6 +110,23 @@ executable bookstore
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
+executable tick
+  main-is:             Main.hs
+  hs-source-dirs:
+      examples/tick
+  build-depends:
+      base
+    , okapi
+    , warp
+    , wai
+    , text
+    , http-api-data
+    , http-types
+    , wai-extra
+    , binary
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  default-language:    Haskell2010
+
 test-suite okapi-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
