--- a/lib/okapi.cabal
+++ b/lib/okapi.cabal
@@ -36,6 +36,7 @@ library
       Okapi.App
       Okapi.Route
       Okapi.Response
+      Okapi.Key
   other-modules:
       Paths_okapi
   hs-source-dirs:
@@ -54,8 +55,8 @@ library
     , http-types
     , natural-transformation
     , network
-    , pretty-simple
     , regex-tdfa
+    , rose-trees
     , text
     , vault
     , wai
@@ -107,6 +108,7 @@ executable bookstore
     , text
     , http-api-data
     , http-types
+    , containers
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
